# matt-walsh-projects

./: .gitignore  Jenkinsfile  README.md
.github/: publishTests.yml
.github/workflows/: cppcheck.yml  mac-cppcheck.yml  publishTests.yml
Scripts/: build_script.sh
Section15/Challenge/: Checking_Account.h  Trust_Account.cpp
Section16-2/Challenge/: Checking_Account.cpp  I_Printable.cpp  Savings_Account.cpp  Savings_Account.h
Section16/Challenge/: Account_Util.h  Savings_Account.cpp  Trust_Account.h  main.cpp
Section18-2/Challenge/: Account.cpp  CMakeLists.txt  IllegalBalanceException.h  InsufficentFundsException.h  main.cpp
Section18/Challenge/: IllegalBalanceException.h  InsufficientFundsException.h  main.cpp
Section_10/Challenge/src/: CMakeLists.txt  Letter_Pyramid.cpp  main.cpp
Section_12/Challenge/src/: CMakeLists.txt  main.cpp
Section_13/Challenge/src/: CMakeLists.txt  Makefile  Movies.cpp
Section_13_2/Challenge/src/: CMakeLists.txt  Movie.cpp  Movie.h  Movies.cpp  main.cpp
Section_13_2/Challenge/test/: Movie_test.cpp
Section_14/src/: CMakeLists.txt  MyString.cpp  MyString.h  main.cpp
Section_15/Challenge/: Account_Util.cpp  Account_Util.h  CMakeLists.txt  Checking_Account.cpp  Trust_Account.h  main.cpp
Section_16-2/Challenge/: Account.cpp  CMakeLists.txt  Checking_Account.h  I_Printable.h  main.cpp
Section_16/Challenge/: Account.h  I_Printable.h
Section_17/Challenge/: CMakeLists.txt  main.cpp
Section_18/Challenge/: Account.cpp  CMakeLists.txt
Section_19/: CMakeLists.txt
Section_19/Challenge_1/: CMakeLists.txt  main.cpp
Section_19/Challenge_2/: CMakeLists.txt  main.cpp
Section_19/Challenge_3/: CMakeLists.txt  main.cpp
Section_19/Challenge_4/: CMakeLists.txt  main.cpp  romeoandjuliet_lineno.txt
Section_19/StringStreams/: CMakeLists.txt  main.cpp
Section_6/Challenge/src/: main.cpp
Section_7/Challenge/src/: CMakeLists.txt  main.cpp  section7.cpp
Section_8/Challenge/src/: CMakeLists.txt  main.cpp
Section_9/Challenge/src/: CMakeLists.txt  main.cpp
Unit_Test_Example/: CMakeLists.txt  unittests.sh
Unit_Test_Example/src/: CMakeLists.txt  bootstrap.cpp  calc.cpp  calc.h  main.cpp  run.cpp
Unit_Test_Example/test/: CMakeLists.txt  calc_test.cpp  unit_tests.cpp
