cmake_minimum_required(VERSION 3.20)
project(Section_19)

enable_testing()

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_CXX_FLAGS "-std=c++14")

add_subdirectory(Challenge_1)
add_subdirectory(Challenge_2)
add_subdirectory(Challenge_3)
add_subdirectory(Challenge_4)